# ib-data-sdk

./: LICENSE  README.md  client.py  enums.py  exceptions.py  models.py  processors.py  pyproject.toml
.github/workflows/: publish.yml
docs/source/: conf.py  index.rst  quickstart.rst
docs/source/api/: client.rst  index.rst
src/: __init__.py  cli.py
src/ib_data_sdk/: cli.py  contracts.py  enums.py  models.py
tests/: conftest.py
tests/fixtures/: mock_responses.py
tests/integration/: test_end_to_end.py
tests/unit/: test_client.py  test_models.py  test_processors.py
